[package]
name = "clevis"
version = "0.4.3"
edition = "2021"
description = "A preliminary Rust implementation of the clevis protocol"
rust-version = "1.70"
repository = "https://github.com/pluots/clevis-rs/"
license = "GPL-3.0"

[lib]
name = "clevis"
path = "src/lib.rs"

[[bin]]
name = "clevis"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"
serde = { version = "1.0.192", features = ["derive"] }
sha2 = "0.10.8"
serde_json = { version = "1.0.108", features = ["preserve_order"] }
ureq = { version = "2.8.0", features = ["json"] }
sha1 = "0.10.6"
p256 = { version = "0.13.2", features = ["ecdh", "ecdsa", "jwk"] }
p384 = { version = "0.13.0", features = ["ecdh", "ecdsa", "jwk"] }
p521 = { version = ">=0.13.3", features = ["ecdh", "ecdsa", "jwk"] }
base64ct = { version = "1.6.0", features = ["alloc"] }
elliptic-curve = { version = "0.13.6", features = ["jwk"] }
aead = "0.5.2"
concat-kdf = "0.1.0"
ecdsa = "0.16.8"
zeroize = { version = "1.6.0", features = ["serde"] }

# vsss-rs = "2.7.1"

[features]
_backend = []

[dev-dependencies]
aes-gcm = "0.10.3"
